--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
       <div id="heading" class="d-flex flex-column align-items-center">
         <h1 class="text-center m-0 display-5">James W. R. Portfolio</h1>
         <p class="text-center text-white m-3 fs-4 intro-text">
-          An aspiring <span class="emphasise-text">full-stack</span> developer keenly searching for <span class="emphasise-text">new opportunities</span> to diversify my skillset. If you're interesting in collaborating on a 
-          <span class="emphasise-text">creative new project</span> or simply wish to learn more, please don't hesitate to contact me at <span class="emphasise-text">redgate888@hotmail.com</span>.
+          An aspiring developer keenly searching for <span class="emphasise-text">new opportunities</span> to diversify my skillset. If you're interesting in collaborating on a 
+          <span class="emphasise-text">creative new project</span> or simply wish to learn more, please don't hesitate to contact me via <span class="emphasise-text">redgate888@hotmail.com</span>
         </p>
         <button class="btn rounded-5 link-projects w-100">
           <strong class="p-5 fs-4 w-100">See Projects</strong>
@@ -231,7 +231,7 @@
                       <p class="col-12 d-flex m-0 p-0 text-center">
                         A browser-based, mobile-first weather app created in React that utilizes the OpenWeatherMap,
                         Tomorrow.io, and Mapbox API's to render live weather data together with an 
-                        integrated map for displaying current weather patterns such as precipitation 
+                        integrated map for displaying global weather patterns such as precipitation 
                         intensity and wind speed. Only in its early stages, the plan is to overhaul 
                         the UI with a plethora of dashboard charts/visualizations using Charts.js, and to eventually
                         add forecasting to the map page with a time slider that can extend backwards or forwards
@@ -573,7 +573,7 @@
               <p class="text-center">
                 A browser-based, mobile-first weather app created in React that utilizes the OpenWeatherMap,
                 Tomorrow.io, and Mapbox API's to render live weather data together with an 
-                integrated map for displaying current weather patterns such as precipitation 
+                integrated map for displaying global weather patterns such as precipitation 
                 intensity and wind speed. Only in its early stages, the plan is to overhaul 
                 the UI with a plethora of dashboard charts/visualizations using Charts.js, 
                 and to eventually add forecasting to the map page with a time slider that can 
